total cost with margin profit